--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         </div>
 
                         <div>
-                            <span class="about_number">01</span>
-                            <span class="about_achievement">Years of Experience</span>
+                            <span class="about_number">02</span>
+                            <span class="about_achievement">Years of Study</span>
                         </div>
                     </div>
 
@@ -205,7 +205,7 @@
                 <i class='bx bx-code-alt services_icon'></i>
                     <h3 class="services_title">Web Development</h3>
                     <p class="services_description">Areas of skills and services I provide</p>
-                    <a href="#" class="button">Know More</a>
+                    <a href="https://vivalavegansite.netlify.app/#" class="button">Know More</a>
             </div>
 
             <div class="services_data">
@@ -255,7 +255,7 @@
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web Development</span>
                         <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                        <a href="#" class="button button-link">View Details</a>
+                        <a href="https://vivalavegansite.netlify.app/#" class="button button-link">View Details</a>
                     </div>
         </div>
 
@@ -271,9 +271,9 @@
         <div class="portfolio_content mix javascript">
             <a href="#"><img src="img/webdevelopment.jpg" alt="" class="portfolio_img"></a>
                 <div class="portfolio_data">
-                    <span class="portfolio_subtitle">Web Development</span>
+                    <span class="portfolio_subtitle">JavaScript</span>
                     <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                    <a href="#" class="button button-link">View Details</a>
+                    <a href="http://aquweatherapp.com/" class="button button-link">View Details</a>
                 </div>
         </div>
 
@@ -282,7 +282,7 @@
                 <div class="portfolio_data">
                     <span class="portfolio_subtitle">Email Temp</span>
                     <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                    <a href="#" class="button button-link">View Details</a>
+                    <a href="aquilemailhtmltemplate.netlify.app" class="button button-link">View Details</a>
                 </div>
         </div>
 
