--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                 <a href="#"><img src="img/allprojects.jpg" alt="" class="portfolio_img"></a>
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web Development</span>
-                        <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                        <a href="https://vivalavegansite.netlify.app/#" class="button button-link">View Details</a>
+                        <a href="https://vivalavegansite.netlify.app/"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
+                        <a href="https://vivalavegansite.netlify.app/" class="button button-link">View Details</a>
                     </div>
         </div>
 
@@ -263,8 +263,8 @@
             <a href="#"><img src="img/webdesign.jpg" alt="" class="portfolio_img"></a>
                 <div class="portfolio_data">
                     <span class="portfolio_subtitle">Web Development</span>
-                    <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                    <a href="#" class="button button-link">View Details</a>
+                    <a href="https://vivalavegansite.netlify.app/"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
+                    <a href="https://vivalavegansite.netlify.app/" class="button button-link">View Details</a>
                 </div>
         </div>
 
@@ -272,7 +272,7 @@
             <a href="#"><img src="img/webdevelopment.jpg" alt="" class="portfolio_img"></a>
                 <div class="portfolio_data">
                     <span class="portfolio_subtitle">JavaScript</span>
-                    <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
+                    <a href="http://aquweatherapp.com/"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
                     <a href="http://aquweatherapp.com/" class="button button-link">View Details</a>
                 </div>
         </div>
@@ -281,7 +281,7 @@
             <a href="#"><img src="img/email.jpg" alt="" class="portfolio_img"></a>
                 <div class="portfolio_data">
                     <span class="portfolio_subtitle">Email Temp</span>
-                    <a href="#"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
+                    <a href="aquilemailhtmltemplate.netlify.app"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
                     <a href="aquilemailhtmltemplate.netlify.app" class="button button-link">View Details</a>
                 </div>
         </div>
