--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="home_greeting">Hello, My Name is</span>
                     <h1 class="home_name">Aquil F.</h1>
                         <span class="home_profession">Web Developer</span>
-                            <a download="" href="Aquilportfolioresume.docx" class="button button-light">Download resume</a>
+                            <a download="" href="Aquil web development resume.docx" class="button button-light">Download resume</a>
             </div>
 
                 <div class="home_social">
@@ -198,14 +198,14 @@
                 <i class='bx bx-palette services_icon'></i>
                     <h3 class="services_title">HTML E-mail Design</h3>
                     <p class="services_description">Areas of skills and services I provide</p>
-                    <a href="#" class="button">Know More</a>
+                    <a href="https://nikehtmlemail-aqu.netlify.app/" class="button">Know More</a>
             </div>
 
             <div class="services_data">
                 <i class='bx bx-code-alt services_icon'></i>
                     <h3 class="services_title">Web Development</h3>
                     <p class="services_description">Areas of skills and services I provide</p>
-                    <a href="https://vivalavegansite.netlify.app/#" class="button">Know More</a>
+                    <a href="https://vivalavegansite.netlify.app/" class="button">Know More</a>
             </div>
 
             <div class="services_data">
@@ -255,7 +255,7 @@
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web Development</span>
                         <a href="https://vivalavegansite.netlify.app/"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                        <a href="https://vivalavegansite.netlify.app/" class="button button-link">View Details</a>
+                        <a href="https://app.netlify.com/sites/focused-cray-6d6f48/overview" class="button button-link">View Details</a>
                     </div>
         </div>
 
@@ -281,8 +281,8 @@
             <a href="#"><img src="img/email.jpg" alt="" class="portfolio_img"></a>
                 <div class="portfolio_data">
                     <span class="portfolio_subtitle">Email Temp</span>
-                    <a href="aquilemailhtmltemplate.netlify.app"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
-                    <a href="aquilemailhtmltemplate.netlify.app" class="button button-link">View Details</a>
+                    <a href="https://nikehtmlemail-aqu.netlify.app/"><h2 class="portfolio_title">Portfolio work done recently.</h2></a>
+                    <a href="https://nikehtmlemail-aqu.netlify.app/" class="button button-link">View Details</a>
                 </div>
         </div>
 
